exports[`renders from initial state 1`] = `
<div>
  Hello 
  from initial
</div>
`;

exports[`renders from mapState() 1`] = `
<div>
  Hello 
  from map state
</div>
`;

exports[`renders not from map props which collide with state 1`] = `
<div>
  Hello 
  from initial
</div>
`;

exports[`renders other props from parent 1`] = `
<div>
  Hello other 
  from parent
</div>
`;
